# sdr-research-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py  main.py  models.py  worker.py
app/agents/: __init__.py  critic.py  graph.py  llm.py  researcher.py  writer.py
app/services/: __init__.py  job_queue.py  scraper.py  vector_store.py
app/ui/: streamlit_app.py
assets/: .gitkeep
